tests/should_pass/variant_unique.fit
enum Status { Active, Inactive }
enum Priority { High, Low }

fn classify(s: Status) -> () {
    match s {
        Active => { () }
        Inactive => { () }
    }
}
