tests/should_fail/variant_ambiguous_bare.fit
enum IoError { NotFound, PermissionDenied }
enum HttpError { NotFound, BadRequest }

fn get_error() -> IoError

fn check(e: IoError) -> () {
    match e {
        NotFound => { () }
        PermissionDenied => { () }
    }
}
